name:                Sean
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/danieljharvey/sean-backend#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel J Harvey
maintainer:          example@example.com
copyright:           2018 Daniel J Harvey
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable Sean-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , Spock
                     , text
  default-language:    Haskell2010

test-suite Sean-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/danieljharvey/sean-backend
